--- a/src/content/docs/es/welcome.mdx
+++ b/src/content/docs/es/welcome.mdx
@@ -15,7 +15,7 @@ Scribe for Meetings hace que las pantallas compartidas de Zoom o Microsoft Teams
 
 ¡Y empieza la presentación de diapositivas!
 
-## Características de Cribe For Meetings
+## Características de SCribe For Meetings
 
 * Carga con confianza contenido compartido accesible en tan sólo 5 minutos antes de tu presentación.
 * No es necesario instalar ninguna aplicación o software adicional para crear o acceder al contenido.
