--- a/src/content/docs/fr/welcome.mdx
+++ b/src/content/docs/fr/welcome.mdx
@@ -15,7 +15,7 @@ Scribe for Meetings rend facilement vos partages d'écran Zoom ou Microsoft Team
 
 Et c'est parti pour le diaporama !
 
-## Caractéristiques de cribe For Meetings
+## Caractéristiques de Scribe For Meetings
 
 * Téléchargez en toute confiance du contenu partagé accessible en seulement 5 minutes avant votre présentation.
 * Aucune application ou logiciel supplémentaire à installer pour créer ou accéder au contenu.
