--- a/src/content/docs/it/welcome.mdx
+++ b/src/content/docs/it/welcome.mdx
@@ -15,7 +15,7 @@ Scribe for Meetings rende facilmente accessibili le condivisioni delle schermate
 
 E via con la presentazione!
 
-## Caratteristiche di cribe For Meetings
+## Caratteristiche di Scribe For Meetings
 
 * Caricate con sicurezza contenuti condivisi accessibili in soli 5 minuti prima della presentazione.
 * Nessuna applicazione o software aggiuntivo da installare per creare o accedere ai contenuti.
