--- a/src/content/docs/sv/welcome.mdx
+++ b/src/content/docs/sv/welcome.mdx
@@ -1,37 +1,37 @@
 ---
-title: Welcome!
+title: Välkommen!
 ---
 
 Copyright © 2023 [Pneuma Solutions](https://www.pneumasolutions.com)  
-## Introducing Scribe for Meetings
+## Introduktion till Scribe för möten
 
-Scribe for Meetings easily makes your Zoom or Microsoft Teams screen shares accessible to participants using a screen reader or screen magnification! We know accessibility compliance is important to you, especially when you’re unsure if your original content is fully optimized for accessibility. Scribe for Meetings can easily make your screen shares simultaneously available as WCAG2.1 compliant HTML in as little as 5-minutes.
+Scribe for Meetings gör enkelt dina Zoom- eller Microsoft Teams-skärmdelningar tillgängliga för deltagare som använder en skärmläsare eller skärmförstoring! Vi vet att tillgänglighet är viktigt för dig, särskilt när du är osäker på om ditt ursprungliga innehåll är helt optimerat för tillgänglighet. Scribe for Meetings kan enkelt göra dina skärmdelningar tillgängliga samtidigt som WCAG2.1-kompatibel HTML på så lite som 5 minuter.
 
-## How easy is Scribe for Meetings to use?
+## Hur lätt är Scribe for Meetings att använda?
 
-1. Upload your slide deck in advance or as little as 5-minutes before your webinar.
-1. Paste a link in the chat area we provide you during your meeting (includes participant instructions).
-1. Participants requiring accessible content click the link and get full access to your presentation…
+1. Ladda upp ditt bildspel i förväg eller så lite som 5 minuter före ditt webbinarium.
+1. Klistra in en länk i det chattområde som vi tillhandahåller under ditt möte (innehåller instruktioner för deltagarna).
+1. Deltagare som kräver tillgängligt innehåll klickar på länken och får full tillgång till din presentation..
 
-And it’s on with the slide show!
+Och så är det dags för bildspelet!
 
-## cribe For Meetings features
+## Funktioner i Scribe för möten
 
-* Confidently upload accessible shared content in as little as 5-minutes before your presentation.
-* No additional app or software to install to create or access content.
-* Currently works with Zoom (meetings and webinars) and Microsoft Teams.
-* Your content is formatted into WCAG2.1 compliant Accessible HTML during upload.
-* Graphical descriptions are automatically added to your slides.
-* Participants can pause their view anytime for additional reading while you continue on.
-* One click and attendees are reading your presentation using their screen reader.
+* Ladda upp tillgängligt delat innehåll på så lite som 5 minuter före din presentation.
+* Ingen ytterligare app eller programvara behöver installeras för att skapa eller komma åt innehåll.
+* Fungerar för närvarande med Zoom (möten och webbseminarier) och Microsoft Teams.
+* Ditt innehåll formateras till WCAG2.1-kompatibel tillgänglig HTML under uppladdningen.
+* Grafiska beskrivningar läggs automatiskt till i dina bilder.
+* Deltagarna kan när som helst pausa sin visning för ytterligare läsning medan du fortsätter.
+* Ett klick och deltagarna läser din presentation med hjälp av sin skärmläsare.
 
-## Amazingly simple, Incredibly powerful.
+## Otroligt enkelt, Otroligt kraftfullt.
 
-When you make your screen shares accessible with Scribe for Meetings, the content is displayed in a separate window. Participants continue to have full access to the Zoom or Microsoft Teams session.
-Attendees can switch back and forth from the Zoom or Microsoft Teams meeting to your accessible screen share anytime they want.
+När du gör dina skärmdelningar tillgängliga med Scribe for Meetings visas innehållet i ett separat fönster. Deltagarna har fortsatt full åtkomst till Zoom- eller Microsoft Teams-sessionen.
+Deltagarna kan växla fram och tillbaka från Zoom- eller Microsoft Teams-mötet till din tillgängliga skärmdelning när de vill.
 
-There is no need to give extra instructions on how to access your shared content or break up the flow of your presentation. Participants will intuitively read content just like any other web page.
+Det finns ingen anledning att ge extra instruktioner om hur man kommer åt ditt delade innehåll eller bryta upp flödet i din presentation. Deltagarna kommer intuitivt att läsa innehållet precis som vilken annan webbsida som helst.
 
-## Documentation Interface
+## Gränssnitt för dokumentation
 
-This documentation features easy controls for moving from one section to another, as well as selecting a language to read the documentation in.
+Dokumentationen har enkla kontroller för att flytta från ett avsnitt till ett annat, samt för att välja vilket språk dokumentationen ska läsas på.
