--- a/src/content/docs/pt/welcome.mdx
+++ b/src/content/docs/pt/welcome.mdx
@@ -15,7 +15,7 @@ Scribe for Meetings easily makes your Zoom or Microsoft Teams screen shares acce
 
 And it’s on with the slide show!
 
-## cribe For Meetings features
+## Scribe For Meetings features
 
 * Confidently upload accessible shared content in as little as 5-minutes before your presentation.
 * No additional app or software to install to create or access content.
