fixed a word placement

--- a/src/content/docs/en/welcome.mdx
+++ b/src/content/docs/en/welcome.mdx
@@ -10,7 +10,7 @@ Scribe for Meetings easily makes your Zoom or Microsoft Teams screen shares acce
 ## How easy is Scribe for Meetings to use?
 
 1. Upload your slide deck in advance or as little as 5-minutes before your webinar.
-1. Paste a link in the chat area we provide you during your meeting (includes participant instructions).
+1. Paste a link we provide you in the chat area during your meeting (includes participant instructions).
 1. Participants requiring accessible content click the link and get full access to your presentation…
 
 And it’s on with the slide show!
