translations for this section

--- a/src/content/docs/de/systemspecs.mdx
+++ b/src/content/docs/de/systemspecs.mdx
@@ -1,22 +1,7 @@
 ---
-title: Systemanforderungen
+title: System-Anforderungen
 ---
+Scribe for Meetings läuft vollständig über das Internet und funktioniert daher auf jedem Betriebssystem mit einem modernen Webbrowser. Hier sind also ein paar Grundvoraussetzungen:
+* Eine Konferenzplattform wie z.B. Zoom oder Microsoft Teams. Google Meet, Discord, etc. werden noch nicht unterstützt.
+* PowerPoint, Keynote, Google Slides oder eine andere Präsentationsanwendung, die eine Diashow darstellen kann
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
-
-Um Remote Incident Manager ausführen zu können, muss Ihr System mindestens die folgenden Anforderungen erfüllen:
-
-<Windows>
-  * Windows 7 SP1 oder höher
-  * Windows Server 2012 oder höher
-  * Mindestens 4 GB RAM
-  * Admin-Rechte für die Erstinstallation (nicht erforderlich für automatische Updates)
-</Windows>
-
-<MacOS>
-  * Intel oder Apple Silizium
-  * macOS Ventura oder höher
-  * Mindestens 4 GB RAM
-  * Admin-Rechte für die Erstinstallation (nicht erforderlich für automatische Updates)
-</MacOS>
