--- a/src/content/docs/fr/systemspecs.mdx
+++ b/src/content/docs/fr/systemspecs.mdx
@@ -1,22 +1,7 @@
 ---
 title: Configuration requise
 ---
+Scribe for Meetings fonctionne entièrement sur le Web, et donc sur n'importe quel système d'exploitation doté d'un navigateur Web moderne. Voici donc quelques exigences de base :
+* Une plateforme de conférence telle que Zoom ou Microsoft Teams. Google Meet, Discord, etc. ne sont pas encore pris en charge.
+* PowerPoint, Keynote, Google Slides ou toute autre application de présentation permettant de présenter un diaporama
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
-
-Afin d'exécuter Remote Incident Manager, votre système doit satisfaire ou dépasser les exigences suivantes :
-
-<Windows>
-  * Windows 7 SP1 ou version ultérieure
-  * Windows Server 2012 ou version ultérieure
-  * Au moins 4 Go de RAM
-  * Privilèges d'administrateur pour l'installation initiale (non requis pour les mises à jour automatiques)
-</Windows>
-
-<MacOS>
-  * Intel ou Apple Silicon
-  * macOS Ventura ou version ultérieure
-  * Au moins 4 Go de RAM
-  * Privilèges d'administrateur pour l'installation initiale (non requis pour les mises à jour automatiques)
-</MacOS>
