--- a/src/content/docs/it/systemspecs.mdx
+++ b/src/content/docs/it/systemspecs.mdx
@@ -1,22 +1,7 @@
 ---
 title: Requisiti di sistema
 ---
+Scribe for Meetings funziona interamente sul web, quindi su qualsiasi sistema operativo dotato di un moderno browser web. Ecco quindi alcuni requisiti di base:
+* Una piattaforma per conferenze come Zoom o Microsoft Teams. Google Meet, Discord, ecc. non sono ancora supportati.
+* PowerPoint, Keynote, Google Slides o qualsiasi altra applicazione di presentazione che possa presentare una presentazione
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
-
-Per eseguire Remote Incident Manager, il sistema deve soddisfare o superare i seguenti requisiti:
-
-<Windows>
-  * Windows 7 SP1 o successivo
-  * Windows Server 2012 o successivo
-  * Almeno 4 GB di RAM
-  * Privilegi di amministratore per l'installazione iniziale (non necessari per gli aggiornamenti automatici)
-</Windows>
-
-<MacOS>
-  * Intel o Apple Silicon
-  * macOS Ventura o successivo
-  * Almeno 4 GB di RAM
-  * Privilegi di amministratore per l'installazione iniziale (non necessari per gli aggiornamenti automatici)
-</MacOS>
