--- a/src/content/docs/pt/systemspecs.mdx
+++ b/src/content/docs/pt/systemspecs.mdx
@@ -1,22 +1,7 @@
 ---
 title: Requisitos do sistema
 ---
+O Scribe for Meetings é totalmente executado na Web, portanto, funcionará em qualquer sistema operacional com um navegador da Web moderno. Portanto, aqui estão alguns requisitos básicos:
+* Uma plataforma de conferência, como o Zoom ou o Microsoft Teams. Google Meet, Discord, etc. ainda não são compatíveis.
+* PowerPoint, Keynote, Google Slides ou qualquer aplicativo de apresentação que possa apresentar uma apresentação de slides
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
-
-Para executar o Remote Incident Manager, seu sistema deve atender ou exceder os seguintes requisitos:
-
-<Windows>
-  * Windows 7 SP1 ou posterior
-  * Windows Server 2012 ou posterior
-  * Pelo menos 4 GB de RAM
-  * Privilégios de administrador para a instalação inicial (não é necessário para atualizações automáticas)
-</Windows>
-
-<MacOS>
-  * Intel ou Apple Silicon
-  * macOS Ventura ou posterior
-  * Pelo menos 4 GB de RAM
-  * Privilégios de administrador para a instalação inicial (não é necessário para atualizações automáticas)
-</MacOS>
