--- a/src/content/docs/sv/systemspecs.mdx
+++ b/src/content/docs/sv/systemspecs.mdx
@@ -1,22 +1,7 @@
 ---
 title: Systemkrav
 ---
+Scribe for Meetings körs helt på webben och kommer därför att fungera på alla operativsystem med en modern webbläsare. Här är därför några grundläggande krav:
+* En konferensplattform som Zoom eller Microsoft Teams. Google Meet, Discord m.fl. stöds inte ännu.
+* PowerPoint, Keynote, Google Slides eller något annat presentationsprogram som kan visa ett bildspel
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
-
-För att kunna köra Remote Incident Manager måste ditt system uppfylla eller överträffa följande krav:
-
-<Windows>
-  * Windows 7 SP1 eller senare
-  * Windows Server 2012 eller senare
-  * Minst 4 GB RAM-minne
-  * Administratörsbehörighet för den första installationen (krävs inte för automatiska uppdateringar)
-</Windows>
-
-<MacOS>
-  * Intel- eller Apple-kisel
-  * macOS Ventura eller senare
-  * Minst 4 GB RAM-minne
-  * Administratörsbehörighet för den första installationen (krävs inte för automatiska uppdateringar)
-</MacOS>
