--- a/src/content/docs/es/systemspecs.mdx
+++ b/src/content/docs/es/systemspecs.mdx
@@ -1,22 +1,7 @@
 ---
 title: Requisitos del sistema
 ---
+Scribe for Meetings se ejecuta íntegramente en la web, por lo que funcionará en cualquier sistema operativo con un navegador web moderno. Por lo tanto, aquí hay algunos requisitos básicos:
+* Una plataforma de conferencias como Zoom o Microsoft Teams. Google Meet, Discord, etc. aún no son compatibles.
+* PowerPoint, Keynote, Google Slides, o cualquier aplicación de presentación que pueda presentar un pase de diapositivas
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
-
-Para ejecutar Remote Incident Manager, su sistema debe cumplir o superar los siguientes requisitos:
-
-<Windows>
-  * Windows 7 SP1 o posterior
-  * Windows Server 2012 o posterior
-  * Al menos 4 GB de RAM
-  * Privilegios de administrador para la instalación inicial (no necesarios para las actualizaciones automáticas)
-</Windows>
-
-<MacOS>
-  * Intel o Apple Silicon
-  * macOS Ventura o posterior
-  * Al menos 4 GB de RAM
-  * Privilegios de administrador para la instalación inicial (no necesarios para las actualizaciones automáticas)
-</MacOS>
