added import statements for search

--- a/src/content/docs/en/dashboard.mdx
+++ b/src/content/docs/en/dashboard.mdx
@@ -2,6 +2,9 @@
 title: Management and Administration
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe  for Meetings features a  web-based dashboard to facilitate various meeting, account and organization management tasks.
 It should be noted that the feature set of the dashboard is largely dependent on whether you are a user or an admin.
 
