--- a/src/content/docs/en/gettingconnected.mdx
+++ b/src/content/docs/en/gettingconnected.mdx
@@ -2,6 +2,9 @@
 title: Getting Connected
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings offers two quick, painless ways to connect to your accessible slide presentation.
 
 ## Joining via Direct Link
