--- a/src/content/docs/en/localization.mdx
+++ b/src/content/docs/en/localization.mdx
@@ -2,6 +2,9 @@
 title: Localization
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings currently ships with 6 major languages, with more being added over time. If your system locale is among the supported languages in Scribe for Meetings, the user interface will use your chosen language. Note that presentation content will still be presented in the language of the original document.
 
 ## Switching languages
