--- a/src/content/docs/en/plans.mdx
+++ b/src/content/docs/en/plans.mdx
@@ -2,6 +2,9 @@
 title: Plans and Purchasing
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for meetings has a variety of plans and on-demand purchase options for individuals, companies and organizations.
 
 ## Meeting Pass
