--- a/src/content/docs/en/systemspecs.mdx
+++ b/src/content/docs/en/systemspecs.mdx
@@ -1,6 +1,10 @@
 ---
 title: System Requirements
 ---
+
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings runs entirely on the web, thus it will work on any operating system with a modern web browser. Thus, here are a few basic requirements:
 * A conferencing platform such as Zoom or Microsoft Teams. Google Meet, Discord, etc. are not supported yet.
 * PowerPoint, Keynote, Google Slides, or any presentation application that can present a slideshow
