--- a/src/content/docs/en/faq.mdx
+++ b/src/content/docs/en/faq.mdx
@@ -2,6 +2,9 @@
 title: Frequently Asked questions
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Here are answers to some common questions concerning Scribe for Meetings. When faced with an issue, please refer to this document whenever possible.  
 Don’t see your question? [Contact us](https://pneumasolutions.com/contact/), and let’s get you squared away.
 
