--- a/src/content/docs/en/makingmeetings.mdx
+++ b/src/content/docs/en/makingmeetings.mdx
@@ -2,6 +2,9 @@
 title: Setting Up Accessible Meetings
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Whether done well in advance or within minutes of the meeting's start time, the setup process is quick and efficient. The procedure for starting the meeting will vary slightly depending on your role.
 
 ## If you are the Organizer
