--- a/src/content/docs/en/meetingcontrols.mdx
+++ b/src/content/docs/en/meetingcontrols.mdx
@@ -2,6 +2,9 @@
 title: Meeting Controls
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Once inside the meeting, slide content will be presented in sync with the presenter's screenshare. When a new slide presents itself, the following will happen:
 1. You will heara beep.
 1. The content will present itself onscreen and be read out by an existing screen reader.
