imports inserted for search db

--- a/src/content/docs/de/gettingconnected.mdx
+++ b/src/content/docs/de/gettingconnected.mdx
@@ -2,6 +2,9 @@
 title: Konkret werden
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings bietet zwei schnelle, mühelose Möglichkeiten, eine Verbindung zu Ihrer barrierefreien Folienpräsentation herzustellen.
 
 ## Verbindung über direkten Link
