--- a/src/content/docs/de/localization.mdx
+++ b/src/content/docs/de/localization.mdx
@@ -2,6 +2,9 @@
 title: Lokalisierung
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings wird derzeit mit 6 Hauptsprachen ausgeliefert, weitere werden im Laufe der Zeit hinzugefügt. Wenn Ihr Systemgebietsschema zu den von Scribe for Meetings unterstützten Sprachen gehört, wird die Benutzeroberfläche in der von Ihnen gewählten Sprache angezeigt. Beachten Sie, dass der Inhalt der Präsentation weiterhin in der Sprache des Originaldokuments angezeigt wird.
 
 ## Umschalten der Sprache
