--- a/src/content/docs/de/makingmeetings.mdx
+++ b/src/content/docs/de/makingmeetings.mdx
@@ -2,6 +2,9 @@
 title: Einrichten von barrierefreien Meetings
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Egal, ob die Einrichtung lange im Voraus oder innerhalb weniger Minuten nach Beginn der Besprechung erfolgt, sie ist schnell und effizient. Das Verfahren zum Starten der Besprechung wird je nach Ihrer Rolle leicht variieren.
 
 ## Wenn Sie der Organisator sind
