--- a/src/content/docs/de/meetingcontrols.mdx
+++ b/src/content/docs/de/meetingcontrols.mdx
@@ -2,6 +2,9 @@
 title: Treffen Kontrollen
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 In der Besprechung werden die Folieninhalte synchron mit der Bildschirmfreigabe des Moderators angezeigt. Wenn eine neue Folie präsentiert wird, geschieht Folgendes:
 1. Sie hören einen Piepton.
 1. Der Inhalt wird auf dem Bildschirm angezeigt und von einem vorhandenen Bildschirmlesegerät vorgelesen.
