--- a/src/content/docs/de/plans.mdx
+++ b/src/content/docs/de/plans.mdx
@@ -2,6 +2,9 @@
 title: Planen und Einkaufen
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings bietet eine Vielzahl von Plänen und On-Demand-Kaufoptionen für Einzelpersonen, Unternehmen und Organisationen.
 
 ## Meeting Pass
