--- a/src/content/docs/es/dashboard.mdx
+++ b/src/content/docs/es/dashboard.mdx
@@ -2,6 +2,9 @@
 title: Gestión y Administración
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings cuenta con un panel de control basado en web para facilitar diversas tareas de gestión de reuniones, cuentas y organizaciones.
 Cabe señalar que el conjunto de funciones del panel depende en gran medida de si se es usuario o administrador.
 
