--- a/src/content/docs/es/faq.mdx
+++ b/src/content/docs/es/faq.mdx
@@ -2,6 +2,9 @@
 title: Preguntas frecuentes
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 A continuación encontrará respuestas a algunas preguntas frecuentes sobre Scribe for Meetings. Cuando se enfrente a un problema, consulte este documento siempre que sea posible.  
 ¿No encuentra su pregunta? [Póngase en contacto con nosotros](https://pneumasolutions.com/contact/) y le ayudaremos a aclararla.
 
