--- a/src/content/docs/es/localization.mdx
+++ b/src/content/docs/es/localization.mdx
@@ -2,6 +2,9 @@
 title: Localización
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings se distribuye actualmente en 6 idiomas principales, a los que se irán añadiendo más con el tiempo. Si la configuración regional de su sistema se encuentra entre los idiomas admitidos en Scribe for Meetings, la interfaz de usuario utilizará el idioma elegido. Tenga en cuenta que el contenido de la presentación se seguirá presentando en el idioma del documento original.
 
 ## Cambiar de idioma
