--- a/src/content/docs/es/makingmeetings.mdx
+++ b/src/content/docs/es/makingmeetings.mdx
@@ -2,6 +2,9 @@
 title: Organizar reuniones accesibles
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Tanto si se hace con mucha antelación como a pocos minutos de la hora de inicio de la reunión, el proceso de preparación es rápido y eficaz. El procedimiento para iniciar la reunión variará ligeramente en función de su función.
 
 ## Si eres el Organizador
