--- a/src/content/docs/es/meetingcontrols.mdx
+++ b/src/content/docs/es/meetingcontrols.mdx
@@ -2,6 +2,9 @@
 title: Controles de reunión
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Una vez dentro de la reunión, el contenido de las diapositivas se presentará sincronizado con la pantalla compartida del presentador. Cuando se presente una nueva diapositiva, ocurrirá lo siguiente:
 1. Escuchará un pitido.
 1. El contenido se presentará en pantalla y será leído por un lector de pantalla existente.
