--- a/src/content/docs/es/plans.mdx
+++ b/src/content/docs/es/plans.mdx
@@ -2,6 +2,9 @@
 title: Planes y Compras
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe para reuniones tiene una variedad de planes y opciones de compra a la carta para particulares, empresas y organizaciones.
 
 ## Meeting Pass
