--- a/src/content/docs/es/systemspecs.mdx
+++ b/src/content/docs/es/systemspecs.mdx
@@ -1,6 +1,10 @@
 ---
 title: Requisitos del sistema
 ---
+
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings se ejecuta íntegramente en la web, por lo que funcionará en cualquier sistema operativo con un navegador web moderno. Por lo tanto, aquí hay algunos requisitos básicos:
 * Una plataforma de conferencias como Zoom o Microsoft Teams. Google Meet, Discord, etc. aún no son compatibles.
 * PowerPoint, Keynote, Google Slides, o cualquier aplicación de presentación que pueda presentar un pase de diapositivas
