--- a/src/content/docs/fr/dashboard.mdx
+++ b/src/content/docs/fr/dashboard.mdx
@@ -2,6 +2,9 @@
 title: Gestion et administration
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings dispose d'un tableau de bord basé sur le Web pour faciliter diverses tâches de gestion des réunions, des comptes et des organisations.
 Il convient de noter que les fonctionnalités du tableau de bord dépendent en grande partie de votre statut d'utilisateur ou d'administrateur.
 
