--- a/src/content/docs/fr/faq.mdx
+++ b/src/content/docs/fr/faq.mdx
@@ -2,6 +2,9 @@
 title: Questions fréquemment posées
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Voici les réponses à certaines questions courantes concernant Scribe for Meetings. En cas de problème, veuillez vous référer à ce document dans la mesure du possible.  
 Vous ne trouvez pas votre question ? [Contactez-nous ](https://pneumasolutions.com/contact/), et nous vous aiderons à résoudre votre problème.
 
