--- a/src/content/docs/fr/gettingconnected.mdx
+++ b/src/content/docs/fr/gettingconnected.mdx
@@ -2,6 +2,9 @@
 title: Se faire raccorder
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings offre deux moyens rapides et sans douleur de se connecter à votre présentation de diapositives accessibles.
 
 ## Rejoindre via un lien direct
