--- a/src/content/docs/fr/makingmeetings.mdx
+++ b/src/content/docs/fr/makingmeetings.mdx
@@ -2,6 +2,9 @@
 title: Organiser des réunions accessibles
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Qu'il soit effectué longtemps à l'avance ou quelques minutes avant le début de la réunion, le processus d'installation est rapide et efficace. La procédure de démarrage de la réunion varie légèrement en fonction de votre rôle.
 
 ## Si vous êtes l'organisateur
