--- a/src/content/docs/fr/meetingcontrols.mdx
+++ b/src/content/docs/fr/meetingcontrols.mdx
@@ -2,6 +2,9 @@
 title: Contrôle des réunions
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Une fois dans la réunion, le contenu des diapositives sera présenté en synchronisation avec le partage d'écran du présentateur. Lorsqu'une nouvelle diapositive se présente, il se passe ce qui suit :
 1. Vous entendrez un bip.
 1. Le contenu s'affiche à l'écran et est lu par un lecteur d'écran existant.
