--- a/src/content/docs/fr/plans.mdx
+++ b/src/content/docs/fr/plans.mdx
@@ -2,6 +2,9 @@
 title: Plans et achats
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for meetings propose une variété de plans et d'options d'achat à la demande pour les particuliers, les entreprises et les organisations.
 
 ## Meeting Pass
