--- a/src/content/docs/fr/systemspecs.mdx
+++ b/src/content/docs/fr/systemspecs.mdx
@@ -1,6 +1,10 @@
 ---
 title: Configuration requise
 ---
+
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings fonctionne entièrement sur le Web, et donc sur n'importe quel système d'exploitation doté d'un navigateur Web moderne. Voici donc quelques exigences de base :
 * Une plateforme de conférence telle que Zoom ou Microsoft Teams. Google Meet, Discord, etc. ne sont pas encore pris en charge.
 * PowerPoint, Keynote, Google Slides ou toute autre application de présentation permettant de présenter un diaporama
