--- a/src/content/docs/it/dashboard.mdx
+++ b/src/content/docs/it/dashboard.mdx
@@ -2,6 +2,9 @@
 title: Gestione e amministrazione
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings dispone di un cruscotto basato sul web per facilitare varie attività di gestione di riunioni, account e organizzazioni.
 Va notato che le funzionalità del cruscotto dipendono in larga misura dal fatto che siate utenti o amministratori.
 
