--- a/src/content/docs/it/faq.mdx
+++ b/src/content/docs/it/faq.mdx
@@ -2,6 +2,9 @@
 title: Domande frequenti
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Ecco le risposte ad alcune domande comuni su Scribe for Meetings. Quando vi trovate di fronte a un problema, fate riferimento a questo documento ogni volta che è possibile.  
 Non trovate la vostra domanda? [Contattateci] (https://pneumasolutions.com/contact/) e vediamo di risolvere il problema.
 
