--- a/src/content/docs/it/gettingconnected.mdx
+++ b/src/content/docs/it/gettingconnected.mdx
@@ -2,6 +2,9 @@
 title: Connessione
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings offre due modi rapidi e indolori per collegarsi alla presentazione accessibile.
 
 ## Collegamento tramite link diretto
