--- a/src/content/docs/it/localization.mdx
+++ b/src/content/docs/it/localization.mdx
@@ -2,6 +2,9 @@
 title: Localizzazione
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings viene attualmente fornito con 6 lingue principali, a cui se ne aggiungeranno altre nel tempo. Se il locale del sistema è tra le lingue supportate da Scribe for Meetings, l'interfaccia utente utilizzerà la lingua scelta. Il contenuto della presentazione sarà comunque presentato nella lingua del documento originale.
 
 ## Cambiare lingua
