--- a/src/content/docs/it/makingmeetings.mdx
+++ b/src/content/docs/it/makingmeetings.mdx
@@ -2,6 +2,9 @@
 title: Impostazione di riunioni accessibili
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Che sia fatto con largo anticipo o a pochi minuti dall'inizio della riunione, il processo di impostazione è rapido ed efficiente. La procedura di avvio della riunione varia leggermente a seconda del ruolo ricoperto.
 
 ## Se siete l'organizzatore
