--- a/src/content/docs/it/meetingcontrols.mdx
+++ b/src/content/docs/it/meetingcontrols.mdx
@@ -2,6 +2,9 @@
 title: Controlli della riunione
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Una volta all'interno della riunione, il contenuto delle diapositive viene presentato in sincronia con lo screenshare del presentatore. Quando viene presentata una nuova diapositiva, si verifica quanto segue:
 1. Viene emesso un segnale acustico.
 1. Il contenuto si presenta sullo schermo e viene letto da uno screen reader esistente.
