--- a/src/content/docs/it/welcome.mdx
+++ b/src/content/docs/it/welcome.mdx
@@ -2,6 +2,9 @@
 title: Benvenuti!
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Copyright © 2023 [Pneuma Solutions](https://www.pneumasolutions.com)  
 ## Introduzione a Scribe per le riunioni
 
