--- a/src/content/docs/pt/dashboard.mdx
+++ b/src/content/docs/pt/dashboard.mdx
@@ -2,6 +2,9 @@
 title: Gerenciamento e administração
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 O Scribe for Meetings apresenta um painel de controle baseado na Web para facilitar várias tarefas de gerenciamento de reuniões, contas e organizações.
 Deve-se observar que o conjunto de recursos do painel depende muito do fato de você ser um usuário ou um administrador.
 
