--- a/src/content/docs/pt/faq.mdx
+++ b/src/content/docs/pt/faq.mdx
@@ -2,6 +2,9 @@
 title: Perguntas frequentes
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Aqui estão as respostas para algumas perguntas comuns sobre o Scribe for Meetings. Ao se deparar com um problema, consulte este documento sempre que possível.  
 Não encontrou sua pergunta? [Entre em contato conosco] (https://pneumasolutions.com/contact/) para que possamos esclarecê-la.
 
