--- a/src/content/docs/pt/gettingconnected.mdx
+++ b/src/content/docs/pt/gettingconnected.mdx
@@ -2,6 +2,9 @@
 title: Obtendo conexão
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 O Scribe for Meetings oferece duas maneiras rápidas e fáceis de se conectar à sua apresentação de slides acessível.
 
 ## Conexão via link direto
