--- a/src/content/docs/pt/localization.mdx
+++ b/src/content/docs/pt/localization.mdx
@@ -2,6 +2,9 @@
 title: Localização
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Atualmente, o Scribe for Meetings é fornecido com 6 idiomas principais, e mais idiomas serão adicionados ao longo do tempo. Se a localidade do seu sistema estiver entre os idiomas compatíveis com o Scribe for Meetings, a interface do usuário usará o idioma escolhido. Observe que o conteúdo da apresentação ainda será apresentado no idioma do documento original.
 
 ## Alternância de idiomas
