--- a/src/content/docs/pt/meetingcontrols.mdx
+++ b/src/content/docs/pt/meetingcontrols.mdx
@@ -2,6 +2,9 @@
 title: Controles de reunião
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Uma vez dentro da reunião, o conteúdo do slide será apresentado em sincronia com o compartilhamento de tela do apresentador. Quando um novo slide for apresentado, ocorrerá o seguinte:
 1. Você ouvirá um bipe.
 1. O conteúdo será apresentado na tela e lido por um leitor de tela existente.
