--- a/src/content/docs/pt/plans.mdx
+++ b/src/content/docs/pt/plans.mdx
@@ -2,6 +2,9 @@
 title: Planos e compras
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 O Scribe for meetings tem uma variedade de planos e opções de compra sob demanda para indivíduos, empresas e organizações.
 
 ## Passe de reunião
