--- a/src/content/docs/pt/systemspecs.mdx
+++ b/src/content/docs/pt/systemspecs.mdx
@@ -1,6 +1,10 @@
 ---
 title: Requisitos do sistema
 ---
+
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 O Scribe for Meetings é totalmente executado na Web, portanto, funcionará em qualquer sistema operacional com um navegador da Web moderno. Portanto, aqui estão alguns requisitos básicos:
 * Uma plataforma de conferência, como o Zoom ou o Microsoft Teams. Google Meet, Discord, etc. ainda não são compatíveis.
 * PowerPoint, Keynote, Google Slides ou qualquer aplicativo de apresentação que possa apresentar uma apresentação de slides
