--- a/src/content/docs/sv/dashboard.mdx
+++ b/src/content/docs/sv/dashboard.mdx
@@ -2,6 +2,9 @@
 title: Ledning och administration
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings har en webbaserad instrumentpanel som underlättar olika uppgifter för hantering av möten, konton och organisationer.
 Det bör noteras att funktionerna i instrumentpanelen till stor del beror på om du är användare eller administratör.
 
