--- a/src/content/docs/sv/faq.mdx
+++ b/src/content/docs/sv/faq.mdx
@@ -2,6 +2,9 @@
 title: Ofta ställda frågor
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Här hittar du svar på några vanliga frågor om Scribe for Meetings. När du ställs inför ett problem, vänligen hänvisa till detta dokument när det är möjligt.  
 Ser du inte din fråga? [Kontakta oss](https://pneumasolutions.com/contact/), så hjälper vi dig att komma igång.
 
