--- a/src/content/docs/sv/makingmeetings.mdx
+++ b/src/content/docs/sv/makingmeetings.mdx
@@ -2,6 +2,9 @@
 title: Skapa tillgängliga möten
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Oavsett om förberedelserna görs i god tid eller inom några minuter efter att mötet har startat går det snabbt och effektivt. Proceduren för att starta mötet kommer att variera något beroende på din roll.
 
 ## Om du är organisatör
