--- a/src/content/docs/sv/meetingcontrols.mdx
+++ b/src/content/docs/sv/meetingcontrols.mdx
@@ -2,6 +2,9 @@
 title: Kontroll av möten
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 När du är inne i mötet kommer bildinnehållet att presenteras synkroniserat med presentatörens skärmdelning. När en ny bild presenteras kommer följande att hända:
 1. Du kommer att höra ett pip.
 1. Innehållet presenteras på skärmen och läses upp av en befintlig skärmläsare.
