--- a/src/content/docs/sv/plans.mdx
+++ b/src/content/docs/sv/plans.mdx
@@ -2,6 +2,9 @@
 title: Planer och inköp
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe för möten har en mängd olika abonnemang och alternativ för köp på begäran för privatpersoner, företag och organisationer.
 
 ## Mötespass
