--- a/src/content/docs/sv/systemspecs.mdx
+++ b/src/content/docs/sv/systemspecs.mdx
@@ -1,6 +1,10 @@
 ---
 title: Systemkrav
 ---
+
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings körs helt på webben och kommer därför att fungera på alla operativsystem med en modern webbläsare. Här är därför några grundläggande krav:
 * En konferensplattform som Zoom eller Microsoft Teams. Google Meet, Discord m.fl. stöds inte ännu.
 * PowerPoint, Keynote, Google Slides eller något annat presentationsprogram som kan visa ett bildspel
