--- a/src/content/docs/de/dashboard.mdx
+++ b/src/content/docs/de/dashboard.mdx
@@ -2,38 +2,41 @@
 title: Management und Verwaltung
 ---
 
-Scribe  for Meetings features a  web-based dashboard to facilitate various meeting, account and organization management tasks.
-It should be noted that the feature set of the dashboard is largely dependent on whether you are a user or an admin.
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
+Scribe for Meetings bietet ein webbasiertes Dashboard, das verschiedene Aufgaben der Meeting-, Konto- und Organisationsverwaltung erleichtert.
+Es ist zu beachten, dass der Funktionsumfang des Dashboards weitgehend davon abhängt, ob Sie ein Benutzer oder ein Administrator sind.
 
 ## Meeting Management
 
-The meetings section lists all the meetings, past and present, facilitated by you and/or your organization. Clicking on a meeting opens a details page which allows you to:
-* Upload a new or revised slide deck
-* Delete your existing slide deck
-* Access the link to the meeting
-* View how many participants have entered the meeting using Scribe for Meetings (admin)
+Im Bereich "Meetings" werden alle vergangenen und aktuellen Meetings aufgelistet, die von Ihnen und/oder Ihrer Organisation organisiert wurden. Wenn Sie auf eine Besprechung klicken, öffnet sich eine Detailseite, auf der Sie Folgendes tun können
+* Hochladen einer neuen oder überarbeiteten Präsentation
+* Ihre bestehende Präsentation zu löschen
+* Den Link zur Besprechung aufrufen
+* Anzeigen, wie viele Teilnehmer sich mit Scribe for Meetings (admin) in die Besprechung eingeschrieben haben
 
-Clicking the "Delete" link next to a meeting will ask for confirmation, then delete the meeting from your account.
+Wenn Sie auf den Link "Löschen" neben einem Meeting klicken, werden Sie um eine Bestätigung gebeten und das Meeting wird dann aus Ihrem Konto gelöscht.
 
-## Attendance Statistics (admin)
+## Anwesenheitsstatistik (admin)
 
-The attendance statistics section gives you a daily, weekly, monthly, yearly and all time count of all the unique users attending meetings using Scribe for Meetings under your organization.
+Der Bereich Anwesenheitsstatistiken zeigt Ihnen eine tägliche, wöchentliche, monatliche, jährliche und alle Zeiträume umfassende Zählung aller einzelnen Nutzer, die an Meetings mit Scribe for Meetings in Ihrer Organisation teilnehmen.
 
-## Meeting Defaults (admin)
+## Meeting-Standardwerte (admin)
 
-The Meeting Defaults page, located under the Settings menu, allows you to set global defaults that persist across all meetings. They include:
-* Language
-* Automatic image description preference
-* Whether to allow the downloading of slides
+Auf der Seite "Meeting Defaults" im Menü "Settings" können Sie globale Standardeinstellungen festlegen, die für alle Meetings gelten. Dazu gehören:
+* Sprache
+* Bevorzugte automatische Bildbeschreibung
+* Ob das Herunterladen von Folien erlaubt werden soll
 
-## Organization Management (admin)
+## Organisationsmanagement (admin)
 
-Clicking the "Organization" button reveals a "Members" link. This page allows you to add members to the organization, as well as manage existing members.
+Wenn Sie auf die Schaltfläche "Organisation" klicken, wird ein Link "Mitglieder" angezeigt. Auf dieser Seite können Sie der Organisation Mitglieder hinzufügen und bestehende Mitglieder verwalten.
 
-### Adding Members
+### Hinzufügen von Mitgliedern
 
-To add a member, simply enter their email into the "email Address" box, select their role in the dropdown, then click the "add" button.
+Um ein Mitglied hinzuzufügen, geben Sie einfach seine E-Mail-Adresse in das Feld "E-Mail-Adresse" ein, wählen Sie seine Rolle im Dropdown-Menü und klicken Sie dann auf die Schaltfläche "Hinzufügen".
 
-### Managing Existing users
+### Vorhandene Benutzer verwalten
 
-Next to each user, there are two buttons. One allows you to switch their role, while the other deletes them from the organization.
+Neben jedem Benutzer befinden sich zwei Schaltflächen. Mit der einen können Sie die Rolle des Benutzers ändern, mit der anderen können Sie ihn aus der Organisation löschen.
