--- a/src/content/docs/de/faq.mdx
+++ b/src/content/docs/de/faq.mdx
@@ -2,6 +2,9 @@
 title: Häufig gestellte Fragen
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Hier finden Sie Antworten auf einige häufig gestellte Fragen zu Scribe for Meetings. Wenn Sie mit einem Problem konfrontiert werden, beziehen Sie sich bitte wann immer möglich auf dieses Dokument.  
 Sie sehen Ihre Frage nicht? [Kontaktieren Sie uns](https://pneumasolutions.com/contact/), und wir klären alles Weitere mit Ihnen.
 
