--- a/src/content/docs/de/systemspecs.mdx
+++ b/src/content/docs/de/systemspecs.mdx
@@ -1,6 +1,10 @@
 ---
 title: System-Anforderungen
 ---
+
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings läuft vollständig über das Internet und funktioniert daher auf jedem Betriebssystem mit einem modernen Webbrowser. Hier sind also ein paar Grundvoraussetzungen:
 * Eine Konferenzplattform wie z.B. Zoom oder Microsoft Teams. Google Meet, Discord, etc. werden noch nicht unterstützt.
 * PowerPoint, Keynote, Google Slides oder eine andere Präsentationsanwendung, die eine Diashow darstellen kann
