--- a/src/content/docs/es/gettingconnected.mdx
+++ b/src/content/docs/es/gettingconnected.mdx
@@ -2,6 +2,9 @@
 title: Conectarse
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings ofrece dos formas rápidas e indoloras de conectarse a su presentación de diapositivas accesible.
 
 ## Conectarse a través de un enlace directo
