--- a/src/content/docs/fr/localization.mdx
+++ b/src/content/docs/fr/localization.mdx
@@ -2,6 +2,9 @@
 title: Localisation
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings est actuellement livré avec 6 langues principales, et d'autres seront ajoutées au fil du temps. Si la langue locale de votre système fait partie des langues prises en charge par Scribe for Meetings, l'interface utilisateur utilisera la langue choisie. Notez que le contenu de la présentation sera toujours présenté dans la langue du document original.
 
 ## Changer de langue
