--- a/src/content/docs/it/plans.mdx
+++ b/src/content/docs/it/plans.mdx
@@ -2,6 +2,9 @@
 title: Piani e acquisti
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for meetings offre una varietà di piani e opzioni di acquisto on-demand per privati, aziende e organizzazioni.
 
 ## Meeting Pass
