--- a/src/content/docs/it/systemspecs.mdx
+++ b/src/content/docs/it/systemspecs.mdx
@@ -1,6 +1,10 @@
 ---
 title: Requisiti di sistema
 ---
+
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings funziona interamente sul web, quindi su qualsiasi sistema operativo dotato di un moderno browser web. Ecco quindi alcuni requisiti di base:
 * Una piattaforma per conferenze come Zoom o Microsoft Teams. Google Meet, Discord, ecc. non sono ancora supportati.
 * PowerPoint, Keynote, Google Slides o qualsiasi altra applicazione di presentazione che possa presentare una presentazione
