--- a/src/content/docs/pt/makingmeetings.mdx
+++ b/src/content/docs/pt/makingmeetings.mdx
@@ -2,6 +2,9 @@
 title: Como configurar reuniões acessíveis
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Seja com bastante antecedência ou poucos minutos antes do início da reunião, o processo de configuração é rápido e eficiente. O procedimento para iniciar a reunião varia um pouco, dependendo de sua função.
 
 ## Se você for o organizador
