--- a/src/content/docs/pt/welcome.mdx
+++ b/src/content/docs/pt/welcome.mdx
@@ -2,6 +2,9 @@
 title: Welcome!
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Copyright © 2023 [Pneuma Solutions](https://www.pneumasolutions.com)  
 ## Introducing Scribe for Meetings
 
