--- a/src/content/docs/sv/gettingconnected.mdx
+++ b/src/content/docs/sv/gettingconnected.mdx
@@ -2,6 +2,9 @@
 title: Att bli konvektionerad
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings erbjuder två snabba, smärtfria sätt att ansluta till din tillgängliga bildpresentation.
 
 ## Ansluta via direktlänk
