--- a/src/content/docs/sv/localization.mdx
+++ b/src/content/docs/sv/localization.mdx
@@ -2,6 +2,9 @@
 title: Lokalisering
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Scribe for Meetings levereras för närvarande med 6 större språk, och fler språk kommer att läggas till med tiden. Om ditt systemspråk finns bland de språk som stöds i Scribe for Meetings, kommer användargränssnittet att använda ditt valda språk. Observera att presentationsinnehållet fortfarande kommer att presenteras på det språk som används i originaldokumentet.
 
 ## Byta språk
