--- a/src/content/docs/sv/welcome.mdx
+++ b/src/content/docs/sv/welcome.mdx
@@ -2,6 +2,9 @@
 title: Välkommen!
 ---
 
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
 Copyright © 2023 [Pneuma Solutions](https://www.pneumasolutions.com)  
 ## Introduktion till Scribe för möten
 
