--- a/src/content/docs/en/meetingcontrols.mdx
+++ b/src/content/docs/en/meetingcontrols.mdx
@@ -23,7 +23,7 @@ Scribe for Meetings offers several ways to control the rendering. These clickabl
     * If you are already viewing the latest slide, this button will not appear.
     * Pressing this button will suspend the live presentation.
 * Read Aloud: Begins reading the currently focused slide using the system's text to speech voice.
-    * Initiating the read aloud mode will make additional transport controls (rewind, play/pause, and fast forward buttons) as well as buttons to slow down or speed up the speech.
+    * Initiating the read aloud mode will reveal additional transport controls (rewind, play/pause, and fast forward buttons) as well as buttons to slow down or speed up the speech.
 * Download slides: Allows you to download the slides in several different formats.
     * This option only shows if the organizer has allowed the slides to be downloaded.
 
